--- a/CBNU_Kiosk_main/bugger/templates/bugger/old_confirm.html
+++ b/CBNU_Kiosk_main/bugger/templates/bugger/old_confirm.html
@@ -2,8 +2,9 @@
 
 {% load post_extras %}
 {% block content %}
-
-
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>  
     function go_pay() {
         setTimeout(pay_now, 5000);
@@ -44,7 +45,66 @@
         document.body.appendChild(form);
         form.submit();
     }
+  var csrftoken = jQuery("[name=csrfmiddlewaretoken]").val();
 
+    function csrfSafeMethod(method) {
+        return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+    }
+
+    $.ajaxSetup({
+        beforeSend: function (xhr, settings) {
+            if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
+                xhr.setRequestHeader("X-CSRFToken", csrftoken);
+            }
+        }
+    });
+
+var isListening = false;
+var currentMenu = 'Whopper';
+
+function startSpeechRecognition() {
+    if (!isListening) {
+        isListening = true;
+
+        $.ajax({
+            url: "{% url 'bugger:apic' %}",
+            type: "post",
+        }).done(function (data) {
+            if (data.stt !== '') {
+                document.getElementById('stt').innerHTML = data.stt;
+                if (data.stt === '홈으로') {
+                    location.href = '{% url 'bugger:home' %}';
+                }
+                else if(data.stt=='뒤로'){
+                location.href = '{% url 'bugger:old_order' %}';
+                }
+                 else if(data.stt=='카드결제'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_coupon'));
+                        modal.show();
+
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_coupon button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                else if(data.stt=='간편결제'){
+
+                }
+                  else {
+                    // 다른 단어가 입력되었을 때 다시 음성 인식을 시작
+                    isListening = false;
+                    startSpeechRecognition();
+                }
+            }
+            isListening = false;
+            startSpeechRecognition();
+        });
+    }
+}
+
+$(document).ready(function () {
+    startSpeechRecognition();
+});
 </script>
 
 <style>
@@ -107,8 +167,8 @@
         padding-left: 2rem;
     }
 </style>
-
 <!-- Header-->
+<div id="stt"></div>
 <div class="py-3">
 	<div class="container px-1">
         <div class="payment1">
